2003-5-12  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/lore/default.py twisted/lore/latex.py
	  twisted/lore/lint.py twisted/lore/math.py twisted/lore/tree.py
	  twisted/lore/lmath.py twisted/lore/slides.py:
	  Added indexing support to LaTeX and lint, and made sure the
	  config dictionary is passed to the tree processors [this is an
	  API change which might have effect on Lore extensions!]. Rename
	  math to lmath, to avoid some corner-case bugs where it gets mixed
	  with the Python standard module "math".

2003-05-11  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.6alpha1. There was a problem
	with file descriptors in 1.0.5; some debugging information
	has been added to this release. The problem should be fixed
	by alpha2.

2003-05-08  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.5 (same code-base as rc2).

2003-05-08  Glyph Lefkowitz  <glyph@twistedmatrix.com>

	* twisted/world: Added an object database to Twisted.  This is
	still highly experimental!

2003-5-6  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/trial/reporter.py twisted/scripts/trial.py: Add --timing
	option to make the reporter output wall-clock time.

2003-05-05  Brian Warner  <warner@lothar.com>

	* setup.py (setup_args): s/licence/license/, preferred in python-2.3

2003-05-05  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.5rc1.

	* .: Releasing Twisted 1.0.5rc2 (only a Debian build problem fixed).

2003-05-05  Brian Warner  <warner@lothar.com>

	* twisted/trial/reporter.py: remove ResultTypes, it doesn't really
	accomplish its goal

	* twisted/trial/unittest.py: move log.startKeepingErrors() from
	top-level to TestSuite.run(). This fixes the problem of errors
	being eaten by code which imports unittest for other reasons (like
	to use trial.remote reporting)

2003-05-04  Brian Warner  <warner@lothar.com>

	* twisted/trial/reporter.py (ResultTypes): export legal values for