@@ -44,6 +44,9 @@ Use this reactor for running the tests.
 .TP
 \fB-b\fR, \fB--debug\fR
 Run the tests in the Python debugger.
+.TP
+\fB-R\fR, \fB--recurse\fR
+Recursively search the specified packages for test modules.
 
 .SH AUTHOR
 Written by Jonathan M. Lange
