@@ -1,3 +1,9 @@
+2003-05-13 Jonathan Lange <jml@twistedmatrix.com>
+	
+	* twisted/trial/unittest.py twisted/scripts/trial.py
+      	doc/man/trial.1: Add --recurse option to make trial search within
+	sub-packages for test modules.
+
 2003-5-12  Moshe Zadka <moshez@twistedmatrix.com>
 
 	* twisted/lore/default.py twisted/lore/latex.py
